--- a/Final-Diseño-de-Nivel.csproj
+++ b/Final-Diseño-de-Nivel.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\HitBehaviour.cs" />
+    <Compile Include="Assets\MainCamera.cs" />
     <Compile Include="Assets\Scripts\Doors.cs" />
     <Compile Include="Assets\Scripts\Hero.cs" />
   </ItemGroup>
