--- a/Final-Diseño-de-Nivel.csproj
+++ b/Final-Diseño-de-Nivel.csproj
@@ -78,7 +78,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Boos1.cs" />
     <Compile Include="Assets\DwarfIA.cs" />
+    <Compile Include="Assets\EnemyCanvas.cs" />
+    <Compile Include="Assets\EnemyWeapon.cs" />
+    <Compile Include="Assets\HeroWeapon.cs" />
     <Compile Include="Assets\Scripts\Chest.cs" />
     <Compile Include="Assets\Scripts\Doors.cs" />
     <Compile Include="Assets\Scripts\Hero.cs" />
