--- a/Final-Diseño-de-Nivel.csproj
+++ b/Final-Diseño-de-Nivel.csproj
@@ -78,14 +78,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Boos1.cs" />
-    <Compile Include="Assets\DwarfIA.cs" />
-    <Compile Include="Assets\EnemyCanvas.cs" />
-    <Compile Include="Assets\EnemyWeapon.cs" />
-    <Compile Include="Assets\HeroWeapon.cs" />
+    <Compile Include="Assets\Scripts\Boos1.cs" />
+    <Compile Include="Assets\Scripts\Boss1Weapon.cs" />
     <Compile Include="Assets\Scripts\Chest.cs" />
     <Compile Include="Assets\Scripts\Doors.cs" />
+    <Compile Include="Assets\Scripts\DwarfIA.cs" />
+    <Compile Include="Assets\Scripts\EnemyCanvas.cs" />
+    <Compile Include="Assets\Scripts\EnemyWeapon.cs" />
+    <Compile Include="Assets\Scripts\FinalBoss.cs" />
+    <Compile Include="Assets\Scripts\FinalBossWeapon.cs" />
+    <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\Hero.cs" />
+    <Compile Include="Assets\Scripts\HeroWeapon.cs" />
     <Compile Include="Assets\Scripts\HitBehaviour.cs" />
     <Compile Include="Assets\Scripts\MainCamera.cs" />
     <Compile Include="Assets\Scripts\OpenClose.cs" />
